syntax = "proto3";

package com.road.yishi.proto.store;

message SmithFreshRspMsg {
  repeated int32 randomSkill = 1;
}
